# moos_pkg

./: CMakeLists.txt  MOOSGeodesyConfig.cmake.in  moosConfig.cmake.in  moosConfigVersion.cmake.in  package.xml
.github/workflows/: deb_pkg.yml
